--- a/index.html
+++ b/index.html
@@ -2,14 +2,63 @@
 <html lang="en">
 <head>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<title>Car Fuel Efficiency Data Visualization</title>
+<title>Mass Shootings in the United States</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 circle {fill: lightblue; stroke: black;}
+	
+body{
+	font-family: "Lato", sans-serif;
+	font-size: 15px;
+	line-height: 1.5;
+}
+
+
+	
+h2{
+	font-family: "Segoe UI",Arial,sans-serif;
+	font-weight: 400;
+	margin: 10px;
+	font-size: 30px;
+	text-align: center!important;
+}
+
+.canvas{
+	display: flex; 
+	justify-content: center;
+}
+
+.box{
+	border: 5px solid #FFFF00;
+}
+
+.float-container {
+    padding: 20px;
+}
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+}  
+
+.txt{
+	max-width:800px;
+	text-align: center!important;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.btn {
+  background-color: #4CAF50; /* Green */
+  border: 3px solid #fff;  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 	
 div.tooltip {	
     position: absolute;			
@@ -24,68 +73,29 @@ div.tooltip {
     pointer-events: none;			
 }
 
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
+
 </style>
 </head>
-<body onload='init()'>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-  </div>
-</div>
-
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-</div>
+<body>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<div style="max-width:2000px;margin-top:46px">
 
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Fuel Efficiency</h2>
-    <p class="w3-opacity"><i>Is your car as efficient as you thought?</i></p>
-    <p class="w3-justify">Cars are the driving force or the economy (no pun intended), as they allow us to travel to work, buy necesary items, and see our loved ones.
-	However, your car could be burning a major hole in your pocket. Below is a graph of fuel efficiency of many different car makes, with the size of each item on the graph
-	representing the cylinder size of each car. How do you stack up?</p>
+    <h2 >THE BAND</h2>
+     <p class="txt">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     
 	<!-- SVG GOES HERE -->
 	<svg width=600 height=600>
 	</svg>
   </div>
-
- 
-
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32"> 
-        <span onclick="document.getElementById('ticketModal').style.display='none'" 
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
-      </header>
-      <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
-    </div>
-  </div>
   
-  <a class="w3-button w3-dark-grey" href="/index2.html">Next &nbsp;<i class="fa fa-arrow-right"></i></a>
+  <div class="float-container">
+	  <a class="btn" href="/index2.html">Next &nbsp;</a>
+  </div>
 <!-- End Page Content -->
 </div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <p class="w3-medium">Templated based on: <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
 
 
 <script>
@@ -142,31 +152,7 @@ d3.select("svg").append("g")
     .text("City MPG");
 	
 
-
-
 <!-- CODE ENDS HERE-->
-}
-</script>
-
-<!-- W3 Scripts -->
-<script>
-
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
 }
 </script>
 
