--- a/index3.html
+++ b/index3.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<title>Car Fuel Efficiency Data Visualization</title>
+<title>Mass Shootings in the United States</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-circle {fill: lightblue; stroke: black;}
+circle {stroke: black;}
 	
 body{
 	font-family: "Lato", sans-serif;
