--- a/index2.html
+++ b/index2.html
@@ -185,7 +185,7 @@ function bubbleChart() {
       .append('g')
 
 	const fillColour = d3.scaleLinear()
-		.domain([0,(d3.max(nodes, d => d.color))])
+		.domain([0,1466])
 		.range(["white", "red"]);
 	
 	console.log((d3.max(nodes, d => d.color)));
