changing color int

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ div.tooltip {
 
 </style>
 </head>
-<body>
+<body onload='init()'>
 
 <!-- Page content -->
 <div style="max-width:2000px;margin-top:46px">
