--- a/index2.html
+++ b/index2.html
@@ -186,7 +186,7 @@ function bubbleChart() {
 
 	const fillColour = d3.scaleLinear()
 		.domain([0,1466])
-		.range(["white", "red"]);
+		.range(["lightsalmon", "red"]);
 	
 	console.log((d3.max(nodes, d => d.color)));
 
