--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<title>Mass Shootings in the United States</title>
+<title>Car Fuel Efficiency Data Visualization</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
