--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ div.tooltip {
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     
 	<!-- SVG GOES HERE -->
-	<svg width=600 height=600>
+	<svg class="canvas">
 	</svg>
   </div>
   
