--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@ div.tooltip {
   
   <div class="float-container">
 	  <a class="btn" href="/index3.html">Next &nbsp;</a>
-	  <a class="btn" href="/index1.html">Prev &nbsp;</a>
+	  <a class="btn" href="/index.html">Prev &nbsp;</a>
   </div>
 <!-- End Page Content -->
 </div>
