--- a/index3.html
+++ b/index3.html
@@ -31,6 +31,18 @@ h2{
 
 .box{
 	border: 5px solid #FFFF00;
+	float: right;
+	background-color: "ghostwhite"; 
+	height: 400px;
+	width: 400px;
+}
+
+.tooltip{
+	font: 12px sans-serif;		
+	position: absolute;			
+    text-align: center;	
+	font-size: 18px;
+	line-height: 1.5;
 }
 
 .float-container {
@@ -88,7 +100,6 @@ div.tooltip {
     
 	<!-- SVG GOES HERE -->
 	<div id = 'svg' class="canvas"></div>
-  </div>
   
   <div class="float-container">
 	  <a class="btn" href="/index2.html">Prev &nbsp;</a>
