adding tooltip boxes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ h2{
 }
 
 .box{
-	border: 5px solid #FFFF00;
+	border: 5px solid #000000;
 	float: right;
-	background-color: "ghostwhite"; 
+	background-color: #DCDCDC; 
 	height: 400px;
 	width: 400px;
 }
