--- a/index3.html
+++ b/index3.html
@@ -30,9 +30,9 @@ h2{
 }
 
 .box{
-	border: 5px solid #FFFF00;
+	border: 5px solid #000000;
 	float: right;
-	background-color: "ghostwhite"; 
+	background-color: #DCDCDC; 
 	height: 400px;
 	width: 400px;
 }
@@ -99,7 +99,12 @@ div.tooltip {
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     
 	<!-- SVG GOES HERE -->
-	<div id = 'svg' class="canvas"></div>
+	<div>
+		<div id = 'svg' class="canvas"></div>
+		<div class="box">
+				<tooltip class="tooltip"></tooltip>
+		</div>
+	</div>
   
   <div class="float-container">
 	  <a class="btn" href="/index2.html">Prev &nbsp;</a>
