--- a/index3.html
+++ b/index3.html
@@ -219,9 +219,9 @@ function bubbleChart() {
 	}
 	var mouseMove = function(d){
 		bubbleTooltip
-			.html(.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings' + '<span><strong>' + d.occurrences + '</strong></span>' + 
+			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings' + '<span><strong>' + d.occurrences + '</strong></span>' + 
 						'<br>' + 'Gun Law Strictness' + '<span><strong>' + d.legislation + '</strong></span>' + '<br>' + 'Shootings per 100,000' + '<span><strong>' + 
-						d.rate + '</strong></span>'))
+						d.rate + '</strong></span>')
 			.style("left", (d3.mouse(this)[0] + 330) + "px")
 			.style("top", (d3.mouse(this)[1] + 200) + "px")
 	}
