--- a/index2.html
+++ b/index2.html
@@ -217,11 +217,11 @@ function bubbleChart() {
 	}
 	var mouseMove = function(d){
 		bubbleTooltip
-			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings' + '<span><strong>' + d.occurrences + '</strong></span>' + 
-						'<br>' + 'No. Killed' + '<span><strong>' + d.dead + '</strong></span>' + '<br>' + 'No. Injured' + '<span><strong>' + 
+			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings: ' + '<span><strong>' + d.occurrences + '</strong></span>' + 
+						'<br>' + 'No. Killed: ' + '<span><strong>' + d.dead + '</strong></span>' + '<br>' + 'No. Injured: ' + '<span><strong>' + 
 						d.injured + '</strong></span>')
-			.style("left", (d3.mouse(this)[0] + 330) + "px")
-			.style("top", (d3.mouse(this)[1] + 200) + "px")
+			.style("left", (d3.mouse(this)[0]) + "px")
+			.style("top", (d3.mouse(this)[1] + "px")
 	}
 	var mouseLeave = function(d){
 		bubbleTooltip.style("opacity", 0)
