--- a/index3.html
+++ b/index3.html
@@ -219,11 +219,11 @@ function bubbleChart() {
 	}
 	var mouseMove = function(d){
 		bubbleTooltip
-			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings' + '<span><strong>' + d.occurrences + '</strong></span>' + 
-						'<br>' + 'Gun Law Strictness' + '<span><strong>' + d.legislation + '</strong></span>' + '<br>' + 'Shootings per 100,000' + '<span><strong>' + 
-						d.rate + '</strong></span>')
-			.style("left", (d3.mouse(this)[0] + 330) + "px")
-			.style("top", (d3.mouse(this)[1] + 200) + "px")
+			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings: ' + '<span><strong>' + d.occurrences + '</strong></span>' + 
+						'<br>' + 'Gun Law Strictness: ' + '<span><strong>' + d.legislation + '</strong></span>' + '<br>' + 'Shootings per 100,000: ' + '<span><strong>' + 
+						(Math.round(+d.rate * 1000) / 1000) + '</strong></span>')
+			.style("left", (d3.mouse(this)[0]) + "px")
+			.style("top", (d3.mouse(this)[1]) + "px")
 	}
 	var mouseLeave = function(d){
 		bubbleTooltip.style("opacity", 0)
