--- a/index3.html
+++ b/index3.html
@@ -208,7 +208,7 @@ function bubbleChart() {
     //FOR BUBBLE CHART
 	var bubbleTooltip = d3.select("svg")
 		.append("div")
-		.classed("tooltip")
+		.classed("tooltip", true)
 		.style("opacity", 0)
 		.style("background-color", "white")
 		.style("border", "solid")
