--- a/index3.html
+++ b/index3.html
@@ -206,7 +206,7 @@ function bubbleChart() {
 	const lawArr = ["lax", "lenient", "medium", "more strict" ,"strict"]
 
     //FOR BUBBLE CHART
-	var bubbleTooltip = d3.select("svg")
+	var bubbleTooltip = d3.select(".canvas")
 		.append("div")
 		.classed("tooltip", true)
 		.style("opacity", 0)
