fixed tooltip styling on circles

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ var mouseMoveOrange = function(d){
         .attr("cx", (d3.mouse(this)[0]+50) + "px")
         .attr("cy", (d3.mouse(this)[1]+15) + "px")
         
-    tooltip.html('<u>' + d.date + '</u>' + '<br>' + '<span style="color:maroon">' + d.injured + '</span>')
+    tooltip.html('<u>' + x.invert(d3.mouse(this)[0]) + '</u>' + '<br>' + '<span style="color:maroon">' + d.injured + '</span>')
 }
 var mouseLeaveOrange = function(d){
     tooltipBubble.style("opacity", 0)
@@ -225,7 +225,7 @@ svg.append("path")
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
       .attr("stroke", "steelblue")
-      .attr("stroke-width", 3)
+      .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
@@ -239,7 +239,7 @@ svg.append("path")
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
       .attr("stroke", "orange")
-      .attr("stroke-width", 3)
+      .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
