--- a/index3.html
+++ b/index3.html
@@ -74,9 +74,7 @@ h2{
 	
 div.tooltip {	
     position: absolute;			
-    text-align: center;			
-    width: 60px;					
-    height: 28px;					
+    text-align: center;							
     padding: 2px;				
     font: 12px sans-serif;		
     background: lightsteelblue;	
@@ -225,8 +223,8 @@ function bubbleChart() {
 			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings: ' + '<span><strong>' + d.occurrences + '</strong></span>' + 
 						'<br>' + 'Gun Law Strictness: ' + '<span><strong>' + lawArr[+d.legislation] + '</strong></span>' + '<br>' + 'Shootings per 100,000: ' + '<span><strong>' + 
 						(Math.round(+d.rate * 1000) / 1000) + '</strong></span>')
-			.style("left", (d3.mouse(this)[0]) + "px")
-			.style("top", (d3.mouse(this)[1]) + "px")
+			.style("left", (d3.mouse(this)[0]+400) + "px")
+			.style("top", (d3.mouse(this)[1]+200) + "px")
 	}
 	var mouseLeave = function(d){
 		bubbleTooltip.style("opacity", 0)
