line chart tooltip dev

--- a/index2.html
+++ b/index2.html
@@ -221,8 +221,8 @@ function bubbleChart() {
 			.html('<u>' + d.state + '</u>' + '<br>' + 'No. of Shootings: ' + '<span><strong>' + d.occurrences + '</strong></span>' + 
 						'<br>' + 'No. Killed: ' + '<span><strong>' + d.dead + '</strong></span>' + '<br>' + 'No. Injured: ' + '<span><strong>' + 
 						d.injured + '</strong></span>')
-			.style("left", (d3.mouse(this)[0]) + "px")
-			.style("top", (d3.mouse(this)[1]) + "px")
+			.style("left", (d3.mouse(this)[0]+370) + "px")
+			.style("top", (d3.mouse(this)[1]+170) + "px")
 	}
 	var mouseLeave = function(d){
 		bubbleTooltip.style("opacity", 0)
