--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@ h2{
 	text-align: center!important;
 }
 
+h4{
+	font-family: "Segoe UI",Arial,sans-serif;
+	font-weight: 400;
+	margin: 10px;
+	font-size: 16px;
+	text-align: center!important;
+}
+
 .canvas{
 	display: flex; 
 	justify-content: center;
@@ -98,6 +106,7 @@ div.tooltip {
     
 	<!-- SVG GOES HERE -->
 	<div class="canvas">
+	  <h4>Mass Shootings Over the Past 4 Years</h4>
 		<svg></svg>
 		
 		
