--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@ h2{
 
 h4{
 	font-family: "Segoe UI",Arial,sans-serif;
-	font-weight: 400;
+	font-weight: bold;
 	margin: 10px;
 	font-size: 16px;
 	text-align: center!important;
@@ -230,8 +230,8 @@ function bubbleChart() {
 			.html('<b><u>' + d.state + '</u></b>' + '<br>' + 'No. of Shootings: ' + '<span><strong>' + d.occurrences + '</strong></span>' + 
 						'<br>' + 'No. Killed: ' + '<span><strong>' + d.dead + '</strong></span>' + '<br>' + 'No. Injured: ' + '<span><strong>' + 
 						d.injured + '</strong></span>')
-			.style("left", (d3.mouse(this)[0]+400) + "px")
-			.style("top", (d3.mouse(this)[1]+170) + "px")
+			.style("left", (d3.mouse(this)[0]+430) + "px")
+			.style("top", (d3.mouse(this)[1]+185) + "px")
 	}
 	var mouseLeave = function(d){
 		bubbleTooltip.style("opacity", 0)
