--- a/index2.html
+++ b/index2.html
@@ -101,10 +101,11 @@ div.tooltip {
 <!-- Page content -->
 <div style="max-width:2000px;margin-top:46px">
 
-    <h2 >THE BAND</h2>
-    <p class="txt">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <h2 >United States Mass Shooting Index</h2>
+    <p class="txt">Each year, the United States suffers numerous tragedies in the form of mass shootings. These cruel acts of terror have changed the 
+				   lives of many Americans for the worst. Many lives have been lost. Many have been injured; physically, mentally, and emotionally.</p>
+				   
+	<p class="txt new"></p>
     
 	<h4>Mass Shootings Per State</h4>
 	<!-- SVG GOES HERE -->
