--- a/index2.html
+++ b/index2.html
@@ -105,7 +105,8 @@ div.tooltip {
     <p class="txt">Each year, the United States suffers numerous tragedies in the form of mass shootings. These cruel acts of terror have changed the 
 				   lives of many Americans for the worst. Many lives have been lost. Many have been injured; physically, mentally, and emotionally.</p>
 				   
-	<p class="txt new"></p>
+	<p class="txt new">Few states have been fortunate enough to not experience the tragedy of a mass shooting in recent years. Though, as a nation, 
+					   we have all been deeply impacted by each occurrence. </p>
     
 	<h4>Mass Shootings Per State</h4>
 	<!-- SVG GOES HERE -->
